--- a/css/main.css
+++ b/css/main.css
@@ -814,6 +814,9 @@ svg > rect {
     background-color: var(--light-blue-20);
   }
 }
+.deb__item-img {
+  max-width: 300px;
+}
 .deb__item-title {
   padding: 12px 35px 40px 40px;
   font-family: var(--second-family);
@@ -2647,6 +2650,11 @@ svg > rect {
   padding: 20px;
   border-radius: 16px;
 }
+@media (max-width: 992px) {
+  .calc-quiz {
+    padding: 10px;
+  }
+}
 .calc-quiz__steps {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -2740,10 +2748,15 @@ svg > rect {
   align-items: center;
   gap: 10px;
 }
+@media (max-width: 992px) {
+  .calc-quiz__option {
+    padding: 15px;
+  }
+}
 .calc-quiz__option span {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 20px;
+  font-size: clamp(16px, 1vw, 20px);
   color: var(--black);
 }
 .calc-quiz__option input {
@@ -3088,4 +3101,103 @@ svg > rect {
     -ms-flex-pack: center;
     justify-content: center;
   }
+}
+.calc-quiz__option {
+  position: relative;
+}
+
+.calc-quiz__option > input {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+.calc-quiz__option span {
+  position: relative;
+  padding-left: 32px;
+}
+
+.calc-quiz__option span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--light-blue);
+}
+
+.calc-quiz__option .custom-radio:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--light-blue);
+  border-radius: 50%;
+}
+
+.calc-quiz__option > input[type=checkbox]:checked ~ span:before {
+  background: url("../img/check.svg") center/cover no-repeat;
+}
+
+.calc-quiz__option > input[type=radio]:checked ~ span:before {
+  background: url("../img/radio-check.svg") center/cover no-repeat;
+}
+
+.instruct-quiz__option {
+  position: relative;
+}
+
+.instruct-quiz__option > input {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  -moz-appearance: none;
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+.instruct-quiz__option span {
+  position: relative;
+  padding-left: 32px;
+}
+
+.instruct-quiz__option span:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--light-blue);
+}
+
+.instruct-quiz__option .custom-radio:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 20px;
+  height: 20px;
+  border: 1px solid var(--light-blue);
+  border-radius: 50%;
+}
+
+.instruct-quiz__option > input[type=checkbox]:checked ~ span:before {
+  background: url("../img/check.svg") center/cover no-repeat;
+}
+
+.instruct-quiz__option > input[type=radio]:checked ~ span:before {
+  background: url("../img/radio-check.svg") center/cover no-repeat;
 }
