change width container

--- a/css/main.css
+++ b/css/main.css
@@ -155,6 +155,12 @@ a {
   }
 }
 
+@media(max-width: 1366px) {
+  .container {
+    max-width: 1140px;
+  }
+}
+
 .container-fluid {
   max-width: 1640px;
   margin: 0 auto;
